--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -547,5 +547,15 @@ h1.bignr {
 #delicious_share{list-style-image:url("http://sourcemap.org/assets/images/icons/social/delicious_16.png")}
 #twitter_share{list-style-image:url("http://sourcemap.org/assets/images/icons/social/twitter_16.png")}
 
-
+/* Styles for the user dashboard */
+.dashboardcolumn {
+	float:left;
+	width:230px;
+	margin-right:10px;
+	padding:8px;
+	background:#333;
+	color:#fff;
+	height:400px;
+	
+}
 
