--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -32,7 +32,7 @@ h1#title {
 	height:100px;
 	width:auto;
 	text-align:left;
-	
+		padding-bottom: 40px;
 }
 
 #login {
@@ -48,20 +48,18 @@ h1#title {
 	float:left;
 	text-align: left;
 	width:770px;
-	padding-top: 40px;
 	padding-bottom: 60px;
 }
 #columnright{
 	float:right;
 	text-align: right;
 	width: 200px;
-	padding-top: 40px;
 }
 #columnwide{
 	float:left;
 	text-align: left;
-	width:950px;
-	padding-top: 40px;
+	width:970px;
+
 	padding-bottom: 60px;
 }
 
@@ -551,11 +549,33 @@ h1.bignr {
 .dashboardcolumn {
 	float:left;
 	width:230px;
+	margin-top:5px;
 	margin-right:10px;
 	padding:8px;
 	background:#333;
 	color:#fff;
-	height:400px;
+	min-height: 200px;
 	
 }
+.dashboardcolumn h1{
+	color:#fff;
+}
+.dashboardunit {
+	float:left;
+	width:205px;
+	margin-left:5px;
+	margin-bottom:10px;
+	padding:8px;
+	color:#333;
+	background-color: #F5FAFF;
+	background: url(http://cesc.kth.se/wp-content/themes/themorningafter/images/bg/stripe.png) repeat;
+}
 
+#share {
+	margin-left:10px;
+	text-align:left;
+	width: 100%;
+	float: left;
+	margin: 5px;
+	padding: 10px;
+}
