--- a/application/data/forms/quantity.xml
+++ b/application/data/forms/quantity.xml
@@ -1,15 +1,16 @@
 <form action="/lca/create/quantity" name="Quantity">
   <fieldset name="Quantity" linked_type="eco:hasQuantity">
-		<beginning rules="trim">
-			<label>Beginning</label>
+		<quantity rules="trim">
+			<label>Quantity</label>
 			<type>text</type>
 		  	<linked_type>eco:hasUnitOfMeasure</linked_type>
-		</beginning>		
-		<end rules="trim">
-			<label>End</label>
-			<type>text</type>
+		</quantity>		
+		<unit rules="trim">
+			<label>Unit</label>
+			<type>popup</type>
+			<popup>unit</popup>
 		  	<linked_type>eco:hasMagnitude</linked_type>
-		</end>	
+		</unit>	
 	    <submit>
 	        <type>submit</type>
 	        <value>Submit</value>
