--- a/application/data/forms/product.xml
+++ b/application/data/forms/product.xml
@@ -1,10 +1,16 @@
 <form action="/lca/create/product" name="Product">
-  <fieldset name="Product" linked_type="eco:Product">
+	<fieldset name="Product" linked_type="eco:models">
 		<name rules="trim">
 			<label>Name</label>
 			<type>text</type>
 		  	<linked_type>rdfs:label</linked_type>
 		</name>		
+		<datatype rules="trim">
+			<label>Type</label>
+			<type>hidden</type>
+		  	<linked_type>rdfs:type</linked_type>
+			<value>eco:Product</value>
+		</datatype>
 		<UUID rules="trim">
 			<label>UUID</label>
 			<type>hidden</type>
@@ -13,14 +19,14 @@
 		<classification rules="trim">
 			<label>Classification</label>
 			<type>text</type>
-		  	<linked_type>esc:classificationID</linked_type>
+		  	<linked_type>eco:classificationID</linked_type>
 		</classification>
 		<category rules="trim">
 			<label>Category</label>
 			<type>text</type>
 		  	<linked_type>eco:hasCategory</linked_type>
 		</category>
-</fieldset>
+	</fieldset>
 	    <submit>
 	        <type>submit</type>
 	        <value>Submit</value>
