--- a/application/data/forms/start.xml
+++ b/application/data/forms/start.xml
@@ -3,7 +3,7 @@
         <type>hidden</type>
         <value>true</value>
     </blank>  
-  <fieldset name="Process/Product/Service">
+  <fieldset name="Description">
         <name rules="trim|required">
             <label>Name</label>
             <type>text</type>
@@ -49,7 +49,7 @@
     </fieldset>
     <fieldset name="Flow" multiple="yes"> 
         <io rules="trim">
-            <label>Input/Output</label>
+            <label>Direction</label>
             <type>radio</type>
             <options>
                 <eco_Input>Input</eco_Input>
@@ -57,7 +57,7 @@
             </options>
         </io>
         <exchangeType rules="trim">
-            <label>Transfer/Flow</label>
+            <label>Flow</label>
             <type>radio</type>
             <options>
                 <eco_Exchange>Exchange between the process and the environment</eco_Exchange>
