--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -29,7 +29,7 @@ h1#title {
 #header {
 	padding-top: 10px;
 	float:left;
-	height:100px;
+	height:50px;
 	width:auto;
 	text-align:left;
 	padding-bottom: 40px;
@@ -42,6 +42,21 @@ h1#title {
 	text-align:right;
 	
 }
+#menu {
+	padding-top: 60px;
+	float:right;
+	height:30px;
+	text-align:right;
+	padding-right: 15px;
+	width:350px;
+}
+.menu a {
+	color:#333;
+}
+.menu p {
+	color:#eee;
+}
+
 
 /* Main content dividers */
 #columnleft{
@@ -59,8 +74,7 @@ h1#title {
 #columnwide{
 	float:left;
 	text-align: left;
-	width:970px;
-
+	width:990px;
 	padding-bottom: 60px;
 }
 #info{
